compiler-core/src/go/tests/snapshots/gleam_core__go__tests__consts__literal_float_does_not_get_constant_annotation.snap
---
source: compiler-core/src/go/tests/consts.rs
expression: pub const a = 1.1
snapshot_kind: text
---
----- SOURCE CODE
pub const a = 1.1

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

var A gleam_P.Float_t = 1.1
