compiler-core/src/go/tests/snapshots/gleam_core__go__tests__consts__literal_nil_does_not_get_constant_annotation.snap
---
source: compiler-core/src/go/tests/consts.rs
expression: pub const a = Nil
snapshot_kind: text
---
----- SOURCE CODE
pub const a = Nil

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

var A gleam_P.Nil_t = gleam_P.Nil_c{}
